<resources>
    <string name="app_name">Connect 4</string>
    <string name="player_one">Player 1 Name</string>
    <string name="player_two">Player 2 Name</string>
    <string name="start_game">Start</string>
    <string name="imageDesc">Basic graphic of game</string>
    <string name="surrender">Surrender</string>
    <string name="undo">Undo</string>
    <string name="done">Done</string>
    <string name="playerText">%s\'s Turn</string>
    <string name="howToPlay">How to Play</string>
    <string name="restart_button">Restart</string>
    <string name="loser_string">Loser:</string>
    <string name="congrats_image">Congrats!</string>
    <string name="instruction">How to play</string>
    <string name="instruct_body">\t\tEnter player names below and press START.\n\n\t\tTouch and drag to make a game piece appear.
        Release to drop game pieces in a column.\n\n\t\tThe goal is to align four of the your color in a row horizontally, vertically, or diagonally.
        \n\n\t\tPress DONE to end your turn. Press UNDO to remove the piece you already played this turn.
        Press SURRENDER to give up.</string>
    <string name="column_full">Move failed. Column is full!</string>
    <string name="played_error">Move failed. Already played!</string>
    <string name="undo_error">Undo not possible!</string>
    <string name="turn_error">You must play before ending your turn!</string>
    <string name="rematch">Rematch?</string>
    <string name="create_new_user">Create New User</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="create_user">Create User</string>
    <string name="start">Start</string>
    <string name="remember">Remember</string>
    <string name="winner_string">Winner:</string>
    <string name="waiting_string">Waiting For Another Player…</string>
    <string name="create_user_error">Error creating user. User already exists.</string>
    <string name="login_user_error">Error logging in user. Username or Password incorrect.</string>
    <string name="password_match_error">Passwords do not match</string>
    <string name="busy_error">Game is currently full. Please try again later.</string>
    <string name="empty_error">Empty Username or Password</string>
    <string name="cancel">CANCEL</string>
    <string name="lostConnection">Lost Connection With The Server...</string>
    <string name="findPlayer">Find</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">login</string>
    <string name="StartGame">Start</string>
</resources>
